created helper function "sortGYB" for the algorithm. However, i'm not sure if i'll need it anymore, so i've commented it out for now